--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/youtubecp.png" class="img-responsive" alt="Circus tent">
+                        <img src="https://ae01.alicdn.com/kf/HTB121IYdeALL1JjSZFjq6ysqXXak/KIDNIU-Street-Photography-Backdrops-Couple-Autumn-Maple-Leaves-Photo-Studio-Props-Background-Vinyl-7x5ft-or-5x3ft.jpg_640x640.jpg">
                     </a>
                 </div>      
             </div>
