--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="https://www.google.com/search?q=python+image&rlz=1C1CHBF_enUS754US754&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjNqdG909rfAhXm6YMKHa0dB3sQ_AUIDigB&biw=1536&bih=723#imgrc=ZeUHLw-HWN40kM:" alt="" width="304"height="236">                                                    
+                    <img class="img-responsive" src="https://udemy-images.udemy.com/course/750x422/913448_e6e2.jpg" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
                         <h1 class="name">Hey Python Programmer {{name}}!</h1>
                         <hr class="star-light">
